# pdfMCP

./: .env.example  .gitignore  README.md  pyproject.toml  setup_pdf_venv.sh
mcp_server/: __init__.py  __main__.py  settings.py  tools.py
