[project]
name = "pdf-mcp"
version = "0.1.0"
description = "MCP Server for PDF text extraction using OCRmyPDF"
authors = [
    {name = "BSH GDE-EDS"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.9.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "ocrmypdf>=16.0.0",
    "pymupdf>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mcp_server"]
